--- a/apps/helper/templates/layout.html
+++ b/apps/helper/templates/layout.html
@@ -53,27 +53,25 @@
 
     </style>
 
-
     <link rel="stylesheet" href="{% static 'helper/css/cover.css' %}">
-
 </head>
 
 
-<body class="d-flex h-100 text-center text-white bg-dark">
+<body class="d-flex h-100 text-white bg-dark">
 
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+<div class=" d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="mb-auto">
         <div>
             <h3 class="float-md-start mb-0">GFM Ladder</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link active" aria-current="page" href="#">Frontier</a>
                 {% comment %}<a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Contact</a>{% endcomment %}
+        <a class="nav-link" href="#">Contact</a >{% endcomment %}
             </nav>
         </div>
     </header>
 
-    <main class="px-3">
+    <main class="px-12">
         {% block content %}<!-- default content text (typically empty) -->{% endblock %}
     </main>
 
